

[package]
name = "rust-silos"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"
description = "Minimal, robust file embedding for Rust. Efficient, allocation-free, and reliable."
repository.workspace = true
categories = ["filesystem", "embedded", "development-tools::build-utils"]
keywords = ["embed", "filesystem", "include_bytes", "static", "assets"]
readme = "README.md"


[dependencies]
thiserror = "1.0"
phf = { version = "0.11", features = ["macros"] }
walkdir = "2.4"
rust-silos-macros = { workspace = true }


[dev-dependencies]
tempfile = "3.10"
